--- a/biodata.html
+++ b/biodata.html
@@ -1,12 +1,13 @@
 <html lang="en-us">
 <head>
-<title>
-biodata
-</title>
+<title>biodata</title>
+<link rel="stylesheet" type="text/css" href="css/style.css">
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Coming+Soon&family=Satisfy&display=swap" rel="stylesheet">
 </head>
 <body>
 
-<center><h1 style="color:coral" style="font:bold" >BIODATA</h1></center>
+<center><h1>BIODATA</h1></center>
 
 <hr style="color:navy" width="500">
 
