--- a/contact.html
+++ b/contact.html
@@ -1,30 +1,31 @@
 <html lang="en-us">
 <head>
-<title>
-contact
-</title>
+<title>contact</title>
+<link rel="stylesheet" type="text/css" href="css/style.css">
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Coming+Soon&family=Satisfy&display=swap" rel="stylesheet">
 </head>
 <body>
 
-<center><h1 style="color:coral" style="font:bold" >CONTACT ME</h1></center>
+<center><h1>CONTACT ME</h1></center>
 
-<hr style="color:navy" width="500">
+<hr width="500">
 
 <br>
 
 <center><h3>Reach Me by</h3></center>
 <br>
-<center><a href="mailto:ilahazhar99@gmial.com"><center><img src="images/gmailicon.png"></center>
-<br>
-<center><a href="http://wa.me/60194148221"><center><img src="images/whatsappicon.png"></center>
-<br>
-<center><a href="https://t.me/ilahazhar99"><center><img src="images/telegramicon.png"></center>
-<br>
+<center><a href="mailto:ilahazhar99@gmial.com"><center><img src="images/gmailicon.png"></a></center>
+<p>Email</p><br>
+<center><a href="http://wa.me/60194148221"><center><img src="images/whatsappicon.png"></a></center>
+<p>Whatsapp</p><br><br>
+<center><a href="https://t.me/ilahazhar99"><center><img src="images/telegramicon.png"></a></center>
+<p>Telegram</p><br><br>
 <center><a href="https://facebook.com/haailah.azhar">
-<center><img src="images/facebookicon.png"></center>
-<br>
-<center><a href="http://instagram.com/ilahazhar99"><center><img src="images/instagramicon.png"></center>
-
+<center><img src="images/facebookicon.png"></a></center>
+<p>Facebook</p><br><br>
+<center><a href="http://instagram.com/ilahazhar99"><center><img src="images/instagramicon.png"><a></center>
+<p>Instagram</p><br><br>
 <body><body bgcolor="lightpink"></body>
 </h>
 </body>
