--- a/homepage.html
+++ b/homepage.html
@@ -1,16 +1,18 @@
 <html>
 
 <head>
-<title>
-homepage
-</title>
+<title>homepage</title>
+<link rel="stylesheet" type="text/css" href="css/style.css">
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Coming+Soon&family=Satisfy&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
 
 <center><img src="images/sha.png"></center>
 
-<hr width="70%" color="dda0dd">
+<hr width="70%">
 <center><b><font color="black">
 you are welcome to this site...have fun!
 </font></b></center>
