--- a/index.html
+++ b/index.html
@@ -1,19 +1,39 @@
 <html>
 <head>
-<tittle>Html Links</tittle>
-</head>
-<body>
-<br>
-<br>
-<a href="homepage.html">Homepage</a>
-<br>
-<a href="biodata.html">Biodata</a>
-<br>
-<a href="portfolio.html">Portfolio</a>
-<br>
-<a href="experience.html">Experince</a>
-<br>
-<a href="contact.html">Contact me</a>
+<center><tittle><h1 style="color:cc0099;">HTML Links</h1></tittle></center>
+<link rel="stylesheet" type="text/css" href="css/style.css">
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Coming+Soon&family=Satisfy&display=swap" rel="stylesheet">
 
+<style>
+a:link, a:visited
+{color:whitesmoke; 
+background-color:cc66cc;
+padding:10px;
+text-align:center;
+text-decoration:none;
+display:inline-block;
+border-radius:15px;}
+
+a:hover, a:active
+{color:black;
+background-color:cc99cc;
+text-decoration:none;}
+</style>
+</head>
+
+<body>
+<center><p>
+<a href="homepage.html">Homepage</a>
+<br><br>
+<a href="biodata.html">Biodata</a>
+<br><br>
+<a href="portfolio.html">Portfolio</a>
+<br><br>
+<a href="experience.html">Experince</a>
+<br><br>
+<a href="contact.html">Contact me</a>
+</p>
+</center>
 </body>
 </html>
