--- a/portfolio.html
+++ b/portfolio.html
@@ -1,14 +1,15 @@
 <html lang="en-us">
 <head>
-<title>
-portfolio
-</title>
+<title>portfolio</title>
+<link rel="stylesheet" type="text/css" href="css/style.css">
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Coming+Soon&family=Satisfy&display=swap" rel="stylesheet">
 </head>
 <body>
 
-<center><h1 style="color:coral" style="font:bold" >PORTFOLIO</h1></center>
+<center><h1>PORTFOLIO</h1></center>
 
-<hr style="color:navy" width="500">
+<hr width="500">
 
 <br>
 
